<resources>
    <string name="app_name">WeddingInvitation</string>
    <string name="rakshana">#RaksHana</string>
    <string name="title_dynamicfeature">Module Title</string>
    <string name="marriage_date">\n\nMAY 17–18, 2020</string>
    <string name="english_quote">This day for us is special\n A time beyond compare\n The joy we feel deep in our hearts\n We hope you will come and share\n Your presence there with us\n Means more than words can say\n Please try to be there\n To celebrate this special day\n\n#MegHith</string>
    <string name="name"><![CDATA[Rakshith Shankar T R\n &\n Meghana N U]]></string>
    <string name="parent_name">Mrs.Nagamani H S and Mr.Ravi kumar G S\n&amp;\nMrs.Uma D and late Mr.Nagaraj H P\nrequest the honor of your presence\n at the marriage of</string>
    <string name="when">Monday\n18th May, 2020\nMuhurtham: 9:15 - 10:00 AM</string>
    <string name="venue_green_zone">"Venue:\nAre you in GREEN zone?\nLions Club (Community Hall)\nNew town, Bhadravathi\nKarnataka 577301"</string>
    <string name="venue_red_zone">"Are you in RED/ORANGE zone?\nYoutube Live"</string>

    <string name="name_kn" translatable="false"><![CDATA[ಚಿ||ರಾ||ರಕ್ಷಿತ್‌ಶಂಕರ್.ಟಿ.ಆರ್\nಮತ್ತು\nಚಿ||ಸೌ||ಮೇಘನಾ.ಎನ್.ಯು.\n]]></string>
    <string name="parent_name_kn" translatable="false">ಶ್ರೀಮತಿ ನಾಗಮಣಿ.ಹೆಚ್.ಎಸ್ ಮತ್ತು\n ಶ್ರೀ ಜಿ.ಎಸ್.ರವಿಕುಮಾರ್\nಮತ್ತು\nಶ್ರೀಮತಿ ಉಮಾ.ಡಿ ಮತ್ತು ದಿ|| ಶ್ರೀ ಎಚ್.ಪಿ.ನಾಗರಾಜ್\n\nಇವರ ಮಕ್ಕಳ ವಿವಾಹ ಮಹೋತ್ಸವವನ್ನು ನೆರವೇರಿಸಲು ನಿಶ್ಚಯಿಸಿರುವುದರಿಂದ ತಾವುಗಳು ಈ ಶುಭ ಮುಹೂರ್ತಕ್ಕೆ ಆಗಮಿಸಿ ವಧು-ವರರನ್ನು ಆಶೀರ್ವದಿಸಬೇಕಾಗಿ ವಿನಂತಿ.</string>
    <string name="when_kn" translatable="false">ಸೋಮವಾರ\n18-05-2020ನೆ\nಬೆಳಿಗ್ಗೆ 9:15 ರಿಂದ 10:00</string>
    <string name="venue_green_zone_kn" translatable="false">"ಸ್ಥಳ:\nನೀವು ಹಸಿರು ವಲಯದಲ್ಲಿದ್ದೀರಾ?\nಲಯನ್ಸ್ ಕ್ಲಬ್ (ಸಮುದಾಯ ಭವನ)\nಹೊಸ ಪಟ್ಟಣ, ಭದ್ರವತಿ\nಕರ್ನಾಟಕ 577301"</string>
    <string name="venue_red_zone_kn" translatable="false">"ನೀವು ಕೆಂಪು/ಆರೆಂಜ್ ವಲಯದಲ್ಲಿದ್ದೀರಾ?\nYoutube Live"</string>
</resources>
